# simple_llvm

./: README.md  dune-project  simple_llvm.opam
examples/: fib.simple
lib/: ast.ml  codegen.ml  dune  frontend_ir.proto  lexer.mll  parser.mly  parser_nice.ml  simple_llvm_lib.ml  typecheck.ml  typed_ast.ml
test/: dune
